# VoiceStand

./: .env  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  LEADENGINEER_INTEGRATION_ARCHITECTURE.md  LICENSE  PERSISTENT_STORAGE_README.md  PHASE2_WEEK4_IMPLEMENTATION_COMPLETE.md  PHASE3_SUMMARY.md  README.md  TODO.md  WEEK1_SUCCESS_REPORT.md  build-npu.sh  build.sh  build_mouse_monitor.sh  build_personal_gna.sh  debug_wake_word  debug_wake_word.cpp  docker-compose.learning.yml  docker-compose.production.yml  docker-compose.unified.yml  learning_demo_results.json  meteor_lake_optimizations.md  model_manager.sh  mouse-button-monitor  mouse_button_monitor.cpp  setup_learning_system.sh  setup_persistent_storage.sh  start-learning-system.sh  start_advanced_learning_system.sh  test_api_compatibility.py  test_commands.txt  test_learning_system.py  test_mouse_buttons.cpp  test_personal_commands_standalone  test_personal_commands_standalone.cpp  test_wake_word_validation  test_wake_word_validation.cpp  (+3 more)
build_personal_gna/: personal_gna_week1_demo
docs/: ADAPTIVE_SECURITY_INTERFACE.md  GUI_ARCHITECTURE.md  LEARNING_SYSTEM_INTEGRATION.md  MOUSE_BUTTON_DISCOVERY.md  MOUSE_BUTTON_SUPPORT.md  PHASE2_WEEK4_PERSONAL_COMMANDS.md  PROJECT_STATUS.md  README.md  SECURITY_INTEGRATION_GUIDE.md
docs/architecture/: LEADENGINEER_FINAL_INTEGRATION_SUMMARY.md  NPU_GNA_ARCHITECTURE.md  PROJECT_STRUCTURE.md
docs/deployment/: COMPLETION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  RUST_DEPLOYMENT_COMPLETE.md
docs/implementation/: GNA_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NPU_IMPLEMENTATION_SUMMARY.md  RUST_INTEGRATION_COMPLETE.md
docs/phases/: PHASE1_CORE_FOUNDATION.md  PHASE2_PERSONAL_FEATURES.md  WEEK1_COMPLETION_REPORT.md
docs/reports/: DEBUGGER_VALIDATION_REPORT.md  PROJECT_STATUS_ROADMAP.md
docs/technical/: GNA_PHASE1_IMPLEMENTATION.md  INTEL_HARDWARE_ACCELERATION_IMPLEMENTATION.md  NPU_INTEGRATION.md  optimization_summary.md  performance_analysis.md
docu/: CLAUDE.md  DEPLOYMENT_SUCCESS_REPORT.md  MILSPEC_COMPREHENSIVE_ROADMAP.md  PHASE3_ADVANCED_OPTIMIZATION.md  PHASE3_PERFORMANCE_HARDWARE_COMPLETE.md
examples/: intel_acceleration_demo.rs  learning_system_integration_example.cpp  mouse_button_config.json
learning/: Dockerfile.gateway  Dockerfile.learning-api  Dockerfile.learning-api-simple  Dockerfile.monitor  Dockerfile.optimizer  Dockerfile.test  Dockerfile.trainer  requirements.gateway.txt  requirements.learning-api.txt  requirements.monitor.txt  requirements.optimizer.txt  requirements.trainer.txt
learning/dashboard/: index.html
learning/gateway/: database.py  main.py  migrate.py  start_gateway.sh
learning/grafana/: grafana.ini
learning/learning_api/: learning_engine.py  main.py  model_optimizer.py  pattern_analyzer.py  uk_specializer.py
learning/monitor/: alerting.py  metrics_collector.py  performance_monitor.py  start_monitor.sh
learning/optimizer/: model_optimizer_service.py
learning/sql/: 01_init_schema.sql
learning/trainer/: continuous_trainer.py
rust/: CRITICAL_SAFETY_FIXES.md  Cargo.test.toml  Cargo.toml  EMERGENCY_FIX.sh  README.md  build-production.sh  build.sh  test.sh  validate_deployment.sh
rust/hello-voicestand/: Cargo.toml
rust/hello-voicestand/src/: main.rs
rust/src/: deployment_manager.rs  production_validator.rs  thermal_power_manager.rs
rust/voicestand/: Cargo.toml
rust/voicestand-audio/: Cargo.toml
rust/voicestand-audio/src/: buffer.rs  capture.rs  lib.rs  pipeline.rs  processing.rs  vad.rs
rust/voicestand-core/: Cargo.toml
rust/voicestand-core/benches/: core_benchmarks.rs
rust/voicestand-core/src/: config.rs  error.rs  events.rs  integration.rs  lib.rs  performance.rs  types.rs
rust/voicestand-gui/: Cargo.toml
rust/voicestand-gui/src/: lib.rs  settings.rs  waveform.rs  widgets.rs  window.rs
rust/voicestand-hardware/: Cargo.toml
rust/voicestand-hardware/src/: error.rs  ffi.rs  gna.rs  lib.rs  npu.rs  performance.rs
rust/voicestand-intel/: Cargo.toml
rust/voicestand-intel/src/: cpu.rs  dual_activation_coordinator.rs  gna.rs  gna_cli.rs  gna_integration_tests.rs  gna_npu_integration.rs  gna_wake_word_detector.rs  hardware_detection.rs  lib.rs  npu.rs  npu_integration_tests.rs  npu_model_compiler.rs  npu_whisper.rs  push_to_talk_manager.rs  simd.rs  thermal_management.rs
rust/voicestand-speech/: Cargo.toml
rust/voicestand-speech/src/: features.rs  lib.rs  model.rs  postprocess.rs  recognizer.rs
rust/voicestand-state/: Cargo.toml
rust/voicestand-state/src/: activation.rs  hotkey.rs  lib.rs  ptt.rs  state_machine.rs
rust/voicestand/src/: main.rs
src/: gna_main.rs  intel_hardware_stack.rs  intel_me_security.rs  intel_unified_coordinator.rs  lib.rs  main.cpp  npu_cli.rs  tpm_crypto_acceleration.rs
src/core/: adaptive_learning_system.cpp  adaptive_learning_system.h  audio_capture.cpp  audio_capture.h  audio_feature_serializer.cpp  audio_feature_serializer.h  auto_correction.h  context_aware_processor.h  enhanced_whisper_processor.cpp  enhanced_whisper_processor.h  ensemble_whisper_processor.cpp  ensemble_whisper_processor.h  gna_device_manager.cpp  gna_device_manager.h  gna_power_test.cpp  gna_simple_test.cpp  gna_voice_detector.cpp  gna_voice_detector.h  integrated_vtt_system.h  learning_api_client.cpp  learning_api_client.h  learning_system_manager.cpp  learning_system_manager.h  meeting_mode.h  memory_pool.h  noise_cancellation.h  offline_translation.h  personal_voice_commands.cpp  personal_voice_commands.h  phase2_personal_commands_integration.h  phase3_integrated_system.h  pipeline.h  punctuation_restoration.h  settings_manager.cpp  settings_manager.h  speaker_diarization.h  streaming_buffer.h  voice_commands.h  wake_word_detector.h  whisper_processor.cpp  (+1 more)
src/gui/: main_window.cpp  main_window.h  security_dialogs.h  security_hardware_bridge.cpp  security_hardware_bridge.h  security_interface.cpp  security_interface.h
src/integration/: hotkey_manager.cpp  hotkey_manager.h  personal_gna_week1_demo.cpp
src/test/: personal_gna_integration_test.cpp  (+4 more)
(+3 files in other folders)
