[package]
name = "voicestand-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
directories.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
num_cpus = "1.16"
criterion = { version = "0.5", features = ["html_reports"], optional = true }
voicestand-hardware = { path = "../voicestand-hardware" }
voicestand-state = { path = "../voicestand-state" }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
benchmarks = ["criterion"]
meteor-lake-optimized = []

[[bench]]
name = "core_benchmarks"
harness = false
required-features = ["benchmarks"]