[package]
name = "voicestand-hardware"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
parking_lot = "0.12"
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"

[lib]
name = "voicestand_hardware"
path = "src/lib.rs"