[package]
name = "voicestand-intel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
voicestand-core = { path = "../voicestand-core" }
voicestand-audio = { path = "../voicestand-audio" }

# Intel-specific dependencies
openvino = "0.7"
intel-mkl-src = { version = "0.8", features = ["mkl-static-lp64-seq"] }

# SIMD and low-level optimizations
wide = "0.7"
bytemuck = "1.14"
memmap2 = "0.9"

# System integration
libc = "0.2"
nix = "0.27"

# Async runtime
tokio.workspace = true
futures = "0.3"

# Error handling and serialization
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true

[build-dependencies]
bindgen = "0.69"
cc = "1.0"

[features]
default = ["npu", "gna", "simd-avx2"]
npu = []
gna = []
simd-avx2 = []
simd-avx512 = []
intel-mkl = []

[lib]
name = "voicestand_intel"
path = "src/lib.rs"