[package]
name = "voicestand-speech"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
voicestand-core = { path = "../voicestand-core" }
voicestand-audio = { path = "../voicestand-audio" }

candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
serde.workspace = true
regex = "1.10"