[package]
name = "voicestand-state"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
global-hotkey = "0.5"

[lib]
name = "voicestand_state"
path = "src/lib.rs"