[package]
name = "voicestand"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "voicestand"
path = "src/main.rs"

[dependencies]
voicestand-core = { path = "../voicestand-core" }
# Skip problematic dependencies for minimal build
# voicestand-audio = { path = "../voicestand-audio" }
# voicestand-speech = { path = "../voicestand-speech" }
# voicestand-gui = { path = "../voicestand-gui" }

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
global-hotkey.workspace = true
serde.workspace = true
serde_json.workspace = true